--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "ng2-charts": "^1.6.0",
         "primeicons": "^1.0.0-beta.10",
         "primeng": "^6.1.4",
+        "sweetalert2": "^7.26.12",
         "rxjs": "^6.3.2",
         "rxjs-compat": "^6.3.2",
         "yarn": "^1.6.0",
